# tencent_wemeet

./: .dart  .gitignore  .metadata  README.md  pubspec.yaml  run_pigeon.sh
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/: build.gradle
example/android/app/: build.gradle
example/ios/Runner/: AppDelegate.swift  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: tencent_wemeet.podspec
ios/Classes/: SwiftTencentWemeetPlugin.swift  TencentWemeetPlugin.h  TencentWemeetPlugin.m  WeMeetController.swift
ios/Frameworks/TencentMeetingBroadcastExtension.framework/: Info.plist  TencentMeetingBroadcastExtension
ios/Frameworks/TencentMeetingBroadcastExtension.framework/Headers/: WeMeetExtension.h
ios/Frameworks/TencentMeetingSDK/AuthSDK.framework/: AuthSDK  Info.plist
ios/Frameworks/TencentMeetingSDK/ImSDK_Meeting.framework/: Info.plist
ios/Frameworks/TencentMeetingSDK/ModulesDependency.framework/: Info.plist  Module.xcconfig  manifest.json
ios/Frameworks/TencentMeetingSDK/TencentMeetingSDK.framework/: Info.plist  TencentMeetingSDK  manifest.json  module.res
ios/Frameworks/TencentMeetingSDK/TencentSM.framework/: Info.plist  TencentSM
ios/Frameworks/TencentMeetingSDK/Tquic.framework/: Info.plist  Tquic
ios/Frameworks/TencentMeetingSDK/UISDK.framework/: Info.plist  InviteeCell.nib  MeetingImageAlertView.nib  NoInviteeCell.nib  PasswordView.nib  PstnInviteView.nib  StateCodeTableViewCell.nib  StateCodeView.nib  WMAvatarArrowCell.nib  WMTCWebCaptchaView.nib  WebViewErrorView.nib
ios/Frameworks/TencentMeetingSDK/WMWhiteboardSDK.framework/: Info.plist  WMWhiteboardSDK
ios/Frameworks/TencentMeetingSDK/WeMeet.framework/: Info.plist  WeMeet-DailyBuild.xcconfig  WeMeet-Debug.xcconfig
lib/: api_generated.dart  tencent_wemeet.dart  tencent_wemeet_method_channel.dart  tencent_wemeet_platform_interface.dart
macos/: tencent_wemeet.podspec
macos/Classes/: TencentWemeetPlugin.swift
macos/Frameworks/TMSDK.framework/: TMSDK
test/: tencent_wemeet_method_channel_test.dart  tencent_wemeet_test.dart
windows/: CMakeLists.txt  tencent_wemeet_plugin.cpp  tencent_wemeet_plugin.h  tencent_wemeet_plugin_c_api.cpp
windows/include/: WeMeetApi.cpp  WeMeetApi.h  wemeet_sdk_def.h  wemeet_sdk_interface.h
windows/include/tencent_wemeet/: tencent_wemeet_plugin_c_api.h
(+505 files in other folders)
